--- a/flaskProject/templates/CreateEvent.html
+++ b/flaskProject/templates/CreateEvent.html
@@ -76,7 +76,7 @@
             <textarea class="form-control" id="exampleFormControlTextarea1" rows="4"></textarea>
         </div>
         <button type="submit" class="btn btn-secondary"><a href="{{ url_for('EventView') }}">Create</a></button>
-        <button type="submit" class="btn btn-secondary"><a href="{{ url_for('EventView') }}">Cancel</a></button>
+        <button type="submit" class="btn btn-secondary"><a href="{{ url_for('SetupContentView') }}">Cancel</a></button>
     </form>
     <hr>
 {% endblock content %}
