--- a/flaskProject/templates/FindingsView.html
+++ b/flaskProject/templates/FindingsView.html
@@ -56,7 +56,7 @@
 {% block sidebar %}
     <!-- side bar -->
     <div class="content-section">
-        <h3>Sidebar</h3>
+        <h3>FRIC Menu</h3>
         <p class='text-muted'>You can put any information here you'd like.
         <ul class="list-group">
             <li class="list-group-item list-group-item-light"><input class="form-control" type="text"
@@ -71,20 +71,17 @@
                 </div>
             </li>
             <li class="list-group-item list-group-item-light"><a href="{{ url_for('EventTree') }}"> Event Tree</a></li>
-            <li class="list-group-item list-group-item-light"><a href="{{ url_for('EventView') }}"> Systems</a></li>
+            <li class="list-group-item list-group-item-light"><a href="{{ url_for('Systems') }}"> Systems</a></li>
             <li class="list-group-item list-group-item-light"><a href="{{ url_for('SystemView') }}"> Tasks</a></li>
             <li class="list-group-item list-group-item-light"><a href="{{ url_for('TaskView') }}"> Subtasks</a></li>
             <li class="list-group-item list-group-item-light"><a href="{{ url_for('FindingsView') }}"> Findings</a></li>
-            <li class="list-group-item list-group-item-light"><a href="{{ url_for('ArchiveContentView') }}"> Archive</a>
+            <li class="list-group-item list-group-item-light"><a href="{{ url_for('ArchiveContentView') }}"> Archived Contents</a>
             </li>
             <li class="list-group-item list-group-item-light"><a href="{{ url_for('ConfigurationContentView') }}">
                 Configuration</a></li>
             <li class="list-group-item list-group-item-light"><a href="{{ url_for('SetupContentView') }}"> Setup</a>
             </li>
             <li class="list-group-item list-group-item-light"><a href="{{ url_for('Help') }}"> Help</a></li>
-
-            <li class="list-group-item list-group-item-light"><a href="{{ url_for('GenerateReport') }}"> Generate
-                Report</a></li>
             <li class="list-group-item list-group-item-light"><a href="{{ url_for('Sync') }}"> Sync</a></li>
         </ul>
         </p>
