--- a/flaskProject/templates/GenerateReport.html
+++ b/flaskProject/templates/GenerateReport.html
@@ -11,7 +11,7 @@
 {% block sidebar %}
     <!-- side bar -->
     <div class="content-section">
-        <h3>Sidebar</h3>
+        <h3>FRIC Menu</h3>
         <p class='text-muted'>You can put any information here you'd like.
         <ul class="list-group">
             <li class="list-group-item list-group-item-light"><a href="{{ url_for('EventTree') }}"> Event Tree</a></li>
