--- a/flaskProject/templates/layout.html
+++ b/flaskProject/templates/layout.html
@@ -2,7 +2,7 @@
 {% extends "bootstrap/base.html" %}
 
 <!DOCTYPE html>
-<html lang="en">
+<link lang="en">
 <!-- use blocks instead of normal <head></head> & <body></body> html tags, since this class is a child of bootstrap, otherwise anything in head and body tags would not be
      inherited to the child classes of this main structure file, for example, home html file wouldn't show the head or body from this class, everything in child classes needs
      to be in blocks-->
@@ -13,8 +13,7 @@
     <meta charset="utf-8">
     <!--  jQuery -->
     <script type="text/javascript" src="https://code.jquery.com/jquery-1.11.3.min.js"></script>
-
-    <!-- Bootstrap Date-Picker Plugin -->
+    <!-- Bootstrap Date-Picker Plugin, does this work offline???-->
     <script type="text/javascript"
             src="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-datepicker/1.4.1/js/bootstrap-datepicker.min.js"></script>
     <link rel="stylesheet"
