--- a/flaskProject/templates/EditEvent.html
+++ b/flaskProject/templates/EditEvent.html
@@ -4,7 +4,7 @@
 <!-- html code for the body of the page-->
 {% block content %}
     <h1>Edit Event</h1>
-    <form>
+    <form action="{{ url_for('EventView') }}" method="post">
         <div class="form-row">
             <div class="form-group">
                 <label for="inputTitle">Name</label>
@@ -63,15 +63,6 @@
             <label>Security Classification Title Guide</label>
             <input class="form-control">
         </div>
-
-        <div class="form-group">
-            <label for="inputPriority">Priority</label>
-            <select id="inputPriority" class="form-control">
-                <option>Low</option>
-                <option>Medium</option>
-                <option>High</option>
-            </select>
-        </div>
         <div class="form-group">
             <label for="exampleFormControlTextarea1">Description</label>
             <textarea class="form-control" id="exampleFormControlTextarea1" rows="4"></textarea>
@@ -94,7 +85,7 @@
             <input class="form-control">
         </div>
 
-        <button type="submit" class="btn btn-secondary"><a href="{{ url_for('EventView') }}">Save</a></button>
+        <button type="submit" class="btn btn-secondary">Save</button>
         <button type="submit" class="btn btn-secondary"><a href="{{ url_for('EventView') }}">Cancel</a></button>
         <br><br>
     </form>
